--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="TrainingGround - платформа для обучения программированию с интерактивными уроками, тренажёрами и офлайн-режимом" />
     <title>TrainingGround Lessons</title>
     <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="theme-color" content="#0b1521" />
@@ -14,7 +15,10 @@
     />
   </head>
   <body>
-    <app-shell>
+    <!-- Skip to main content link for keyboard navigation -->
+    <a href="#main-content" class="skip-link">Перейти к основному содержимому</a>
+
+    <app-shell id="main-content" role="main">
       <noscript>
         Требуется включить JavaScript, чтобы пользоваться тренажёром.
       </noscript>
